--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,9 @@ Style/StringLiterals:
 Style/StringLiteralsInInterpolation:
   EnforcedStyle: double_quotes
 
+Naming/FileName:
+  Enabled: false
+
 # Disable all Metrics cops
 Metrics:
   Enabled: false
