--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,7 @@
 AllCops:
   TargetRubyVersion: 3.3
+  NewCops: enable
+  SuggestExtensions: false
 
 Style/StringLiterals:
   EnforcedStyle: double_quotes
@@ -8,6 +10,9 @@ Style/StringLiteralsInInterpolation:
   EnforcedStyle: double_quotes
 
 Naming/FileName:
+  Enabled: false
+
+Lint/DuplicateBranch:
   Enabled: false
 
 # Disable all Metrics cops
